NIFI-10516: PutORC with Java 17 fails when using SNAPPY Compression